@@ -17,7 +17,6 @@ TODO Android
 	[Cards] button needs to be nice
 	[Hint] button needs to be nice
 	attack and move screen need to take into account dpi when drawing the countries
-	on tablet the segmented control for the map views needs extra padding
 	in capital mode, the circles around countries look wrong, maybe draw 2 or use thicker lines
 	when placing armies, the player can only place 1 army at a time, no choice to place 1 or 5 or 10 or 25 ...
 	when you are in "MUST TRADE" mode the "Go" button should not say "End Trade"
